Issue #17926: Fix dbm.__contains__ on 64-bit big-endian machines.